--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div id="category-breakdown"></div>
     </div>
     <div class="results-chart">
-      <canvas id="maturityRadar"></canvas>
+      <canvas id="maturityRadar" width="500"></canvas>
     </div>
   </div>
   <div id="recommendations" class="recommendations-panel"></div>
@@ -148,7 +148,8 @@
 
 
 <footer>
-  <p>© CxB – Cyber Governance for Boards · cxb.org.uk</p>
+  <!-- <p>© CxB – Cyber Governance for Boards · cxb.org.uk</p> -->
+  <p>© Martyn Croft CxB Ltd 2026</p>
 </footer>
 
 <script src="app.js"></script>
